update color palette with additional indigo and green shades; enhance link styles for better visibility

--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,8 @@
      /* Base colors */
   --indigo-50: #eef2ff;
   --indigo-100: #e0e7ff;
+  --indigo-300: #8da2fb;
+  --indigo-400: #6875f5;
   --indigo-500: #6366f1;
   --indigo-600: #4f46e5;
   --indigo-700: #4338ca;
@@ -22,14 +24,21 @@
   --red-600: #dc2626;
   --red-700: #b91c1c;
 
+  --green-50: #ecfdf5;
+  --grenn-400: #22d3ee;
+  --green-500: #22c55e;
+  --green-600: #16a34a;
+  
+
   /* Semantic tokens - Light theme (default) */
   --color-background: var(--slate-50);
   --color-surface: white;
   --color-text: var(--slate-900);
   --color-text-secondary: var(--slate-600);
+  --color-text-header: var(--indigo-400);
   
-  --color-primary: var(--indigo-500);
-  --color-primary-hover: var(--indigo-600);
+  --color-primary: var(--indigo-400);
+  --color-primary-hover: var(--indigo-500);
   --color-primary-text: white;
   
   --color-secondary: var(--slate-500);
@@ -39,6 +48,10 @@
   --color-danger: var(--red-500);
   --color-danger-hover: var(--red-600);
   --color-danger-text: white;
+
+  --color-success: var(--green-500);
+  --color-success-hover: var(--green-600);
+  --color-success-text: white;
 
   --color-border: var(--slate-200);
 }
@@ -50,9 +63,10 @@
   --color-surface: var(--slate-700);
   --color-text: white;
   --color-text-secondary: var(--slate-200);
+  --color-text-header: var(--slate-100);
   
-  --color-primary: var(--indigo-500);
-  --color-primary-hover: var(--indigo-400);
+  --color-primary: var(--indigo-400);
+  --color-primary-hover: var(--indigo-300);
   --color-primary-text: white;
   
   --color-secondary: var(--slate-600);
@@ -62,6 +76,10 @@
   --color-danger: var(--red-500);
   --color-danger-hover: var(--red-400);
   --color-danger-text: white;
+
+  --color-success: var(--green-600);
+  --color-success-hover: var(--green-500);
+  --color-success-text: white;
 
   --color-border: var(--slate-600);
   }
@@ -117,4 +135,14 @@ body {
 
   button{
     font-weight: 500;
+  }
+
+  a{
+    text-decoration: none;
+    color: var(--color-primary);
+  }
+
+  a:hover{
+    text-decoration: underline;
+    color: var(--color-primary-hover);
   }
